[gd_scene load_steps=7 format=3 uid="uid://c0p2v5jkeoqdi"]

[ext_resource type="Texture2D" uid="uid://coc2gf6c0eyre" path="res://assets/bgs/bg_f_1.png" id="1_fuims"]
[ext_resource type="FontFile" uid="uid://bq3x0g6opxv7u" path="res://assets/fonts/MorrisRomanAlternate-Black.ttf" id="1_obcti"]
[ext_resource type="FontFile" uid="uid://dpghealcypu5y" path="res://assets/fonts/CaslonAntique.ttf" id="5_2cjui"]
[ext_resource type="Script" path="res://Scripts/LoginManager.gd" id="5_ycscd"]
[ext_resource type="Script" path="res://Scripts/user_not_found.gd" id="6_crvb2"]

[sub_resource type="Theme" id="Theme_5gk6o"]
default_font = ExtResource("1_obcti")
default_font_size = 40

[node name="Login" type="Node2D"]

[node name="BgF1" type="Sprite2D" parent="."]
position = Vector2(574.706, 324.5)
scale = Vector2(0.791613, 0.790441)
texture = ExtResource("1_fuims")

[node name="Login" type="Button" parent="."]
offset_left = 313.0
offset_top = 430.0
offset_right = 544.0
offset_bottom = 491.0
focus_neighbor_left = NodePath("../Register")
focus_neighbor_top = NodePath("../Password")
focus_neighbor_right = NodePath("../Register")
theme = SubResource("Theme_5gk6o")
text = "Login"

[node name="Register" type="Button" parent="."]
offset_left = 634.0
offset_top = 430.0
offset_right = 865.0
offset_bottom = 491.0
focus_neighbor_left = NodePath("../Login")
focus_neighbor_right = NodePath("../Login")
theme = SubResource("Theme_5gk6o")
text = "Register
"

[node name="Username" type="LineEdit" parent="."]
offset_left = 314.0
offset_top = 219.0
offset_right = 861.0
offset_bottom = 295.0
focus_neighbor_top = NodePath("../Password")
focus_neighbor_bottom = NodePath("../Password")
theme_override_fonts/font = ExtResource("5_2cjui")
theme_override_font_sizes/font_size = 40
placeholder_text = "Username"
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_ycscd")

[node name="Password" type="LineEdit" parent="."]
offset_left = 314.0
offset_top = 311.0
offset_right = 861.0
offset_bottom = 387.0
focus_neighbor_top = NodePath("../Username")
focus_neighbor_bottom = NodePath("../Login")
theme_override_fonts/font = ExtResource("5_2cjui")
theme_override_font_sizes/font_size = 40
placeholder_text = "Password"
clear_button_enabled = true
caret_blink = true
secret = true

[node name="Label" type="Label" parent="."]
offset_left = 3.0
offset_top = 134.0
offset_right = 1148.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_obcti")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
script = ExtResource("6_crvb2")

[connection signal="pressed" from="Login" to="Username" method="_on_login_pressed"]
[connection signal="pressed" from="Login" to="Label" method="_on_login_pressed"]
[connection signal="pressed" from="Register" to="Username" method="_on_register_pressed"]
[connection signal="login_error" from="Username" to="Label" method="_on_username_login_error"]
[connection signal="no_password" from="Username" to="Label" method="_on_username_no_password"]
[connection signal="no_username" from="Username" to="Label" method="_on_username_no_username"]
